# transformers

./: .gitignore  pyproject.toml
data/: english_map.json  hindi_map.json  test.json  train.json  validation.json
notebook/: data_prep.ipynb  transformers.ipynb  transformers_training.ipynb
src/: data_loader.py  data_preparation.py  data_processing.py  transformers.py
