[project]
name = "attention-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "numpy>=2.1.3",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchtext>=0.18.0",
    "torchvision>=0.20.1",
]
